--- a/src/app/partials/_common-scss-file.scss
+++ b/src/app/partials/_common-scss-file.scss
@@ -1,13 +1,9 @@
 :host {
-    display: block;
-    background-color: var(--background-color);
-    color: var(--text-color);
+  display: block;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
-h1 {
-    color: var(--h1-text-color);
-}
-
-p {
-    color: var(--p-color);
+::ng-deep .bg-light {
+  background-color: var(--background-color) !important;
 }
