--- a/src/app/modules/navbar-module/navbar/navbar.component.scss
+++ b/src/app/modules/navbar-module/navbar/navbar.component.scss
@@ -7,6 +7,11 @@
         height: calc(100vh - 51px) !important;
         // height: calc(100vh - 234px) !important;
     }
+
+    overflow: scroll;
+    &::-webkit-scrollbar{
+        display: none;
+    }
 }
 
 
@@ -47,7 +52,7 @@ img {
 }
 
 .sub-title {
-    font-family: "Poppins", sans-serif;
+ 
     font-weight: 400;
     font-style: normal;
     font-size: 12px;
