--- a/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.html
+++ b/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.html
@@ -36,8 +36,11 @@
       </ol>
     </div>
   </div>
-  <div class="body-content">
+  <div class="body-content ">
     <div class="row">
+      <div class="mb-4">
+        <p class="text-center heading">Submit Your Request</p>
+      </div>
       <div class="mb-3 col-md-6">
         <label for="firstName" class="form-label">First Name *</label>
         <input type="text" class="form-control" placeholder="Enter First Name" />
@@ -61,6 +64,9 @@
       <div class="mb-3">
         <label for="referenceFile" class="form-label">Upload Image or PDF File for Reference</label>
         <input class="form-control" type="file">
+      </div>
+      <div class="mt-3 d-flex justify-content-end ">
+        <button class="btn btn-primary" type="submit">Send</button>
       </div>
     </div>
   </div>
