--- a/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.scss
+++ b/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.scss
@@ -1,6 +1,18 @@
 .body-content {
-    max-width: 600px;
+    max-width: 700px;
     margin: auto;
+    margin-top: 50px !important;
+    padding: 40px 30px;
+
+    @media screen and (max-width : 768px) {
+        padding: 30px 20px !important;
+        max-width: 400px !important;
+    }
+
+    @media screen and (min-width : 768px) {
+        padding: 40px 30px !important;
+        max-width: 700px !important;
+    }
 }
 
 .sub-heading {
