--- a/src/app/partials/_variables.scss
+++ b/src/app/partials/_variables.scss
@@ -133,7 +133,7 @@ body {
 
 
 input[type="text"],
-[type="email"] {
+[type="email"], [type="number"] {
   background-color: transparent !important;
   border-color: var(--sub-title-color) !important;
   color: var(--text-color) !important;
@@ -195,4 +195,10 @@ label {
   @media screen and (min-width : 768px) {
     border-radius: 30px !important;
   }
+}
+
+.text-danger {
+  font-size: 10px !important;
+  margin-top: 4px;
+  color: #FF4D4D !important;
 }
