--- a/src/app/modules/navbar-module/navbar-links/contact-us/contact-us.component.scss
+++ b/src/app/modules/navbar-module/navbar-links/contact-us/contact-us.component.scss
@@ -27,26 +27,10 @@
     color: red !important;
 }
 
-textarea {
-    overflow: scroll;
-    max-height: 300px;
 
-    &::-webkit-scrollbar {
-        width: 5px;
-        height: 5px;
-        cursor: pointer;
-    }
 
-    &::-webkit-scrollbar-track {
-        background-color: none;
-        cursor: pointer;
-    }
-
-    &::-webkit-scrollbar-thumb {
-        background-color: #878686;
-        border: 1px solid #878686;
-        border-radius: 9px;
-        background-clip: content-box;
-        cursor: pointer;
-    }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
