--- a/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.html
+++ b/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.html
@@ -46,39 +46,48 @@
           <label for="requirement" class="form-label">Describe Your Requirement *</label>
           <textarea class="form-control" formControlName="requirement" rows="3"
             placeholder="Describe Your Requirement In Detail Here..."></textarea>
-          <div
-            *ngIf="customCodeForm.get('requirement')?.invalid && (customCodeForm.get('requirement')?.dirty || customCodeForm.get('requirement')?.touched)"
-            class="text-danger">
-            <div *ngIf="customCodeForm.get('requirement')?.errors?.['required']">Requirement description is required
-            </div>
-            <div *ngIf="customCodeForm.get('requirement')?.errors?.['minlength']">Minimum 20 characters required</div>
+          <div *ngIf="customCodeForm.get('requirement')?.invalid && (customCodeForm.get('requirement')?.dirty || customCodeForm.get('requirement')?.touched)" class="text-danger">
+            <div *ngIf="customCodeForm.get('requirement')?.errors?.['required']">Requirement description is required</div>
+            <div *ngIf="customCodeForm.get('requirement')?.errors?.['minlength'] && !customCodeForm.get('requirement')?.errors?.['required']">Minimum 20 characters required</div>
             <div *ngIf="customCodeForm.get('requirement')?.errors?.['maxlength']">Maximum 1000 characters allowed</div>
           </div>
         </div>
         <div class="mb-3 position-relative">
           <div class="input-wrapper">
             <label for="referenceFile" class="form-label">Upload Image or PDF File for Reference</label>
-            <input type="file" class="form-control" formControlName="referenceFile" accept=".jpg, .jpeg, .png, .pdf" 
-              (change)="referenceFile($event)" />
-
+            <input
+              type="file"
+              class="form-control"
+              formControlName="referenceFile"
+              accept=".jpg, .jpeg, .png, .pdf"
+              (change)="referenceFile($event)"
+            />
+        
             <div *ngIf="fileUploaded" class="remove-icon">
-              <i class="bi bi-x" (click)="removeFile()"></i>
+              <i class="bi bi-x" [matTooltip]="REMOVE_FILE" (click)="removeFile()"></i>
             </div>
           </div>
           <div
             *ngIf="customCodeForm.get('referenceFile')?.invalid && (customCodeForm.get('referenceFile')?.dirty || customCodeForm.get('referenceFile')?.touched)"
             class="text-danger">
-            <div *ngIf="customCodeForm.get('referenceFile')?.errors?.['invalidFile']">Only JPG, JPEG, PNG, or PDF files
-              are allowed</div>
-            <div *ngIf="customCodeForm.get('referenceFile')?.errors?.['invalidFileTypeOrSize']">Invalid file type or
-              size (only JPG, JPEG, PNG, or PDF files less than 3MB are allowed)</div>
+            <div *ngIf="customCodeForm.get('referenceFile')?.errors?.['invalidFile']">
+              Only JPG, JPEG, PNG, or PDF files are allowed
+            </div>
+            <div *ngIf="customCodeForm.get('referenceFile')?.errors?.['invalidFileTypeOrSize']">
+              Invalid file type or size (only JPG, JPEG, PNG, or PDF files less than 3MB are allowed)
+            </div>
           </div>
         </div>
+        
+        
 
-        <div class="mt-3 d-flex justify-content-end ">
+        <div class="mt-5 d-flex justify-content-end ">
           <button class="btn btn-primary" type="submit" [disabled]="customCodeForm.invalid">Send</button>
         </div>
       </div>
     </form>
   </div>
+
+
 </div>
+
