--- a/src/app/partials/_variables.scss
+++ b/src/app/partials/_variables.scss
@@ -204,3 +204,159 @@ label {
   margin-top: 4px;
   color: red !important;
 }
+
+textarea {
+  overflow: auto;
+  max-height: 300px;
+
+  &::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    cursor: pointer;
+  }
+
+  &:hover {
+    &::-webkit-scrollbar {
+      width: 5px;
+      height: 5px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: none;
+      cursor: pointer;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #878686;
+      border: 1px solid #878686;
+      border-radius: 9px;
+      background-clip: content-box;
+      cursor: pointer;
+    }
+  }
+}
+
+.form-control-custom {
+  background-color: transparent !important;
+  border-color: var(--sub-title-color) !important;
+  color: var(--text-color) !important;
+  border: 1px solid var(--sub-title-color) !important;
+  font-size: 14px !important;
+  height: 40px !important;
+  border-radius: 0.375rem !important;
+  padding: 6px 12px !important;
+}
+
+input[type="tel"] {
+  background-color: transparent !important;
+  border-color: transparent !important;
+  color: var(--text-color) !important;
+  border: none !important;
+  font-size: 14px !important;
+}
+
+input[type="tel"]::placeholder {
+  color: var(--sub-title-color) !important;
+  font-size: 12px;
+}
+
+input[type="tel"]:focus-visible {
+  outline: -webkit-focus-ring-color auto 0px !important;
+}
+
+.dropdown-menu {
+  margin-left: -12px !important;
+  margin-top: 12px !important;
+  background-color: var(--background-color) !important;
+}
+
+.dropdown-toggle {
+  padding-left: 0px !important;
+  padding-top: 2px !important;
+}
+
+.country-dropdown {
+  width: 307px !important;
+
+  @media screen and (min-width: 320px) and (max-width: 440px) {
+    width: calc(237px + (100vw - 320px)) !important;
+  }
+
+  @media screen and (min-width: 440px) and (max-width: 768px) {
+    width: 357px !important;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 307px !important;
+  }
+}
+
+.iti__divider {
+  display: none;
+}
+
+.search-container {
+  background-color: transparent !important;
+}
+
+.iti--allow-dropdown input {
+  background-color: var(--background-color) !important;
+  color: var(--text-color) !important;
+  font-size: 12px !important;
+  padding-top: 5px !important;
+}
+
+.iti input#country-search-box {
+  padding-bottom: 6px !important;
+}
+
+.iti__selected-flag {
+  background-color: transparent !important;
+}
+
+.iti--allow-dropdown input:focus-visible {
+  outline: -webkit-focus-ring-color auto 0px !important;
+}
+
+.iti__country-list {
+  width: 305px !important;
+  background-color: var(--background-color) !important;
+  color: var(--text-color) !important;
+  font-size: 12px !important;
+  max-height: 150px !important;
+
+  @media screen and (min-width: 320px) and (max-width: 440px) {
+    width: calc(235px + (100vw - 320px)) !important;
+  }
+
+  @media screen and (min-width: 440px) and (max-width: 768px) {
+    width: 355px !important;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 305px !important;
+  }
+
+  &::-webkit-scrollbar {
+    width: 5px !important;
+    height: 5px !important;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: none !important;
+    cursor: pointer !important;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #878686 !important;
+    border: 1px solid #878686 !important;
+    border-radius: 9px !important;
+    background-clip: content-box !important;
+    cursor: pointer !important;
+  }
+}
+
+
+body {
+  background-color: var(--background-color) !important;
+}
