--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,3 @@
 @import "app/partials/variables";
+@import "./node_modules/bootstrap/scss/bootstrap";
+@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
