--- a/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.scss
+++ b/src/app/modules/navbar-module/navbar-links/get-custom-code/get-custom-code.component.scss
@@ -46,3 +46,18 @@
     margin-top: 4px;
     color: red !important;
 }
+
+
+.main-heading {
+    font-size: calc(30px + 2 * (100vw - 320px) / 1600);
+    font-weight: 600;
+    color: var(--text-color);
+    line-height: 1.2;
+}
+
+
+.main {
+    font-size: calc(14px + 2 * (100vw - 320px) / 1600);
+    line-height: 1.7;
+    color: var(--sub-title-color);
+}
