--- a/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
+++ b/src/app/modules/navbar-module/navbar-links/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="p-3">
+<div class="p-sm-3">
     <p class="text-center main-heading mb-3 mb-md-4">About Us</p>
     <p class="main mb-5">Welcome to <b>Ocean of Code Craft</b>, a premier product by <b>Valorware Soft</b>. Our
         web
