--- a/src/app/partials/_common-scss-file.scss
+++ b/src/app/partials/_common-scss-file.scss
@@ -8,11 +8,12 @@
   background-color: var(--background-color) !important;
 }
 
-.text-danger{
+.text-danger {
   color: red !important;
 }
 
 
-body{
-  background-color: var(--background-color) !important;
+body {
+  background-color: var(--background-color) ;
 }
+
