--- a/src/app/partials/_variables.scss
+++ b/src/app/partials/_variables.scss
@@ -57,7 +57,7 @@ body {
   cursor: pointer;
 
   @media (max-width: 992px) {
-    font-size: 12px !important;
+    font-size: calc(12px + (13 - 12) * ((100vw - 320px) / (992 - 320)));
     padding: 5px 0px !important;
     padding-left: 10px !important;
   }
@@ -253,6 +253,7 @@ input[type="tel"] {
   color: var(--text-color) !important;
   border: none !important;
   font-size: 14px !important;
+  padding-right: 0px !important;
 }
 
 input[type="tel"]::placeholder {
@@ -302,8 +303,15 @@ input[type="tel"]:focus-visible {
 .iti--allow-dropdown input {
   background-color: var(--background-color) !important;
   color: var(--text-color) !important;
+  font-size: 14px !important;
+}
+
+.iti--allow-dropdown input::placeholder {
   font-size: 12px !important;
-  padding-top: 5px !important;
+}
+
+.iti__flag-container {
+  padding-top: 0px !important;
 }
 
 .iti input#country-search-box {
@@ -360,3 +368,4 @@ input[type="tel"]:focus-visible {
 body {
   background-color: var(--background-color) !important;
 }
+
